--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -66,15 +66,15 @@
       {% if site.sidebar.busuanzi.enable %}
       <div>
         {{ site.sidebar.busuanzi.page_pv.alert }}
-        <span id="busuanzi_value_page_pv"></span>{{ site.sidebar.busuanzi.page_pv.unit }}
+        <span id="busuanzi_value_page_pv">页面访问量</span>{{ site.sidebar.busuanzi.page_pv.unit }}
       </div>
       <div>
         {{ site.sidebar.busuanzi.site_pv.alert }}
-        <span id="busuanzi_value_site_pv"></span>{{ site.sidebar.busuanzi.site_pv.unit }}
+        <span id="busuanzi_value_site_pv">站点访问量</span>{{ site.sidebar.busuanzi.site_pv.unit }}
       </div>
       <div>
         {{ site.sidebar.busuanzi.site_uv.alert }}
-        <span id="busuanzi_value_site_uv"></span>{{ site.sidebar.busuanzi.site_uv.unit }}
+        <span id="busuanzi_value_site_uv">访客量</span>{{ site.sidebar.busuanzi.site_uv.unit }}
       </div>
       <script src="{{ site.sidebar.busuanzi.src }}"></script>
       {% endif %}
